--- a/.github/workflows/cargo.yml
+++ b/.github/workflows/cargo.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Login to Amazon ECR
         run: |
-            aws ecr get-login-password --region ${{secrets.AWS_REGION}} | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{secrets.AWS_REGION}}.amazonaws.com
+            aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
 
       - name: Build and push the Docker image
         run: |
