--- a/.github/workflows/cargo.yml
+++ b/.github/workflows/cargo.yml
@@ -39,16 +39,16 @@ jobs:
         run: |
           docker buildx create --use
           docker buildx inspect --bootstrap
-          docker buildx build --platform linux/amd64 -t 533267136505.dkr.ecr.us-east-1.amazonaws.com/crypto-backend:latest --push ./backend
+          docker buildx build --platform linux/amd64 -t ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.us-east-1.amazonaws.com/crypto-backend:latest --push ./backend
 
-      # - name: Build and push frontend image
-      #   run: |
-      #     docker buildx create --use
-      #     docker buildx inspect --bootstrap
-      #     docker buildx build --platform linux/amd64 -t 533267136505.dkr.ecr.us-east-1.amazonaws.com/crypto-frontend:latest --push ./frontend
+      - name: Build and push frontend image
+        run: |
+          docker buildx create --use
+          docker buildx inspect --bootstrap
+          docker buildx build --platform linux/amd64 -t #{{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.us-east-1.amazonaws.com/crypto-frontend:latest --push ./frontend
       
-      # - name: Build and push proxy image
-      #   run: |
-      #     docker buildx create --use
-      #     docker buildx inspect --bootstrap
-      #     docker buildx build --platform linux/amd64, -t 533267136505.dkr.ecr.us-east-1.amazonaws.com/crypto-proxy:latest --push ./nginx
+      - name: Build and push proxy image
+        run: |
+          docker buildx create --use
+          docker buildx inspect --bootstrap
+          docker buildx build --platform linux/amd64, -t ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.us-east-1.amazonaws.com/crypto-proxy:latest --push ./nginx
