--- a/.github/workflows/cargo.yml
+++ b/.github/workflows/cargo.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           docker buildx create --use
           docker buildx inspect --bootstrap
-          docker buildx build --platform linux/amd64 -t #{{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.us-east-1.amazonaws.com/crypto-frontend:latest --push ./frontend
+          docker buildx build --platform linux/amd64 -t ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.us-east-1.amazonaws.com/crypto-frontend:latest --push ./frontend
       
       - name: Build and push proxy image
         run: |
