--- a/.github/workflows/cargo.yml
+++ b/.github/workflows/cargo.yml
@@ -51,4 +51,4 @@ jobs:
         run: |
           docker buildx create --use
           docker buildx inspect --bootstrap
-          docker buildx build --platform linux/amd64, -t ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.us-east-1.amazonaws.com/crypto-proxy:latest --push ./nginx
+          docker buildx build --platform linux/amd64 -t ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.us-east-1.amazonaws.com/crypto-proxy:latest --push ./nginx
