--- a/.github/workflows/cargo.yml
+++ b/.github/workflows/cargo.yml
@@ -40,6 +40,9 @@ jobs:
           docker buildx create --use
           docker buildx inspect --bootstrap
           docker buildx build --platform linux/amd64 -t ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.us-east-1.amazonaws.com/crypto-backend:latest --push ./backend
+        env:
+          DATABASE_URL: ${{secrets.DATABASE_URL}}
+          MORALIS_API_KEY: ${{secrets.MORALIS_API_KEY}}
 
       - name: Build and push frontend image
         run: |
