--- a/.github/workflows/cargo.yml
+++ b/.github/workflows/cargo.yml
@@ -42,7 +42,10 @@ jobs:
         run: |
           docker buildx create --use
           docker buildx inspect --bootstrap
-          docker buildx build --platform linux/amd64 -t ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.us-east-1.amazonaws.com/crypto-backend:latest --push ./backend
+          docker buildx build --platform linux/amd64 \
+          --build-arg DATABASE_URL=${DATABASE_URL} \
+          --build-arg MORALIS_API_KEY=${MORALIS_API_KEY} \
+          -t ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.us-east-1.amazonaws.com/crypto-backend:latest --push ./backend
        
 
       - name: Build and push frontend image
