--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -30,12 +30,18 @@ WORKDIR /usr/src/app
 #Copy the built binary from the builder stage
 COPY --from=builder /usr/src/app/target/release/backend .
 
+# Create a .env file dynamically using build arguments
+ARG DATABASE_URL
+ARG MORALIS_API_KEY
+
 # Copy env from builder stage
 # COPY --from=builder /usr/src/app/.env ./
 # Create a .env file dynamically
-RUN echo "DATABASE_URL=${DATABASE_URL}" >> .env && \
-    echo  "MORALIS_API_KEY"=${MORALIS_API_KEY} >> .env
-
+# RUN echo "DATABASE_URL=${DATABASE_URL}" >> .env && \
+#     echo  "MORALIS_API_KEY"=${MORALIS_API_KEY} >> .env
+# Set environment variables
+ENV DATABASE_URL ""
+ENV MORALIS_API_KEY ""
 
 #Expose the port to axum app runs on
 EXPOSE 3000
