--- a/.github/workflows/AWS-EC2.yml
+++ b/.github/workflows/AWS-EC2.yml
@@ -19,7 +19,7 @@ jobs:
           # AWS secret access key
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           # Where EC2 instance is
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: us-east-1
           # AWS EC2 Instance id or ids
           instance-ids: ${{ secrets.AWS_INSTANCE_ID }}
           # Command execution location
