--- a/.github/workflows/AWS-EC2.yml
+++ b/.github/workflows/AWS-EC2.yml
@@ -15,26 +15,37 @@ jobs:
       - name: echo
         run: |
           echo "Instance ID : ${{ secrets.AWS_INSTANCE_ID }}"
-      - name: AWS SSM Send-Command
-        uses: peterkimzz/aws-ssm-send-command@v1.1.1
+      - name: SSH and deploy
+        uses: appleboy/ssh-action@v0.1.8
         with:
-          # AWS access key id
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-          # AWS secret access key
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          # Where EC2 instance is
-          aws-region: us-east-1
-          # AWS EC2 Instance id or ids
-          instance-ids: ${{ secrets.AWS_INSTANCE_ID }}
+          host: ${{ secrets.EC2_HOST }}
+          username: ec2-user
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            cd /home/ec2-user/etherum
+            docker-compose stop
+            docker-compose pull
+            docker-compose up -d    
+      # - name: AWS SSM Send-Command
+      #   uses: peterkimzz/aws-ssm-send-command@v1.1.1
+      #   with:
+      #     # AWS access key id
+      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+      #     # AWS secret access key
+      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     # Where EC2 instance is
+      #     aws-region: us-east-1
+      #     # AWS EC2 Instance id or ids
+      #     instance-ids: ${{ secrets.AWS_INSTANCE_ID }}
           
-          # Command execution location
-          working-directory: /home/ec2-user/etherum
-          # Bash commands you want to execute
-          command: |
-            sudo docker-compose stop
-            sudo docker-compose rm -f
-            sudo docker-compose pull
-            sudo docker-compose up -d
-            sudo docker image prune -af
+      #     # Command execution location
+      #     working-directory: /home/ec2-user/etherum
+      #     # Bash commands you want to execute
+      #     command: |
+      #       sudo docker-compose stop
+      #       sudo docker-compose rm -f
+      #       sudo docker-compose pull
+      #       sudo docker-compose up -d
+      #       sudo docker image prune -af
           # Comment for Send-Command
-          comment: docker-compose.yml file re-pulls newer versions of crypto images and runs them on the instance.
+          # comment: docker-compose.yml file re-pulls newer versions of crypto images and runs them on the instance.
