--- a/.github/workflows/AWS-EC2.yml
+++ b/.github/workflows/AWS-EC2.yml
@@ -23,7 +23,7 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             cd /home/ec2-user/etherum
-            docker-compose stop
+            docker-compose down
             docker-compose pull
             docker-compose up -d    
       # - name: AWS SSM Send-Command
