aws yaml changes

--- a/.github/workflows/AWS-EC2.yml
+++ b/.github/workflows/AWS-EC2.yml
@@ -23,6 +23,8 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             cd /home/ec2-user/etherum
+            aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
+
             docker-compose down
             docker-compose pull
             docker-compose up -d    
